--- a/Agglomerative.ipynb
+++ b/Agglomerative.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "6e49d7cc-2b13-476c-94f4-427ff6badcd9",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
     "agglomerative_clustering(data, \"complete\")\n",
     "\n",
     "print(\"\\n=== AVERAGE LINKAGE ===\")\n",
-    "agglomerative_clustering(data, \"average\")\n"
+    "agglomerative_clustering(data, \"average\")"
    ]
   },
   {
@@ -236,11 +236,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "dde27afd-14eb-491a-94f7-98ebe07d568a",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== SINGLE LINKAGE ===\n",
+      "Step 1: Merged clusters 0 and 1 -> [[1, 2], [2, 3]]\n",
+      "Step 2: Merged clusters 2 and 3 -> [[1, 0], [1, 2], [2, 3]]\n",
+      "Step 3: Merged clusters 0 and 1 -> [[5, 8], [8, 8]]\n",
+      "Step 4: Merged clusters 0 and 1 -> [[1, 0], [1, 2], [2, 3], [5, 8], [8, 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "# Sample 2D dataset\n",
+    "data = [\n",
+    "    [1, 2],\n",
+    "    [2, 3],\n",
+    "    [5, 8],\n",
+    "    [8, 8],\n",
+    "    [1, 0]\n",
+    "]\n",
+    "\n",
+    "def eucledian(p1,p2):\n",
+    "    return math.sqrt((p1[0]-p2[0])**2+(p1[1]-p2[1])**2)\n",
+    "def single_link(c1,c2):\n",
+    "    return min(eucledian(p1,p2) for p1 in c1 for p2 in c2)\n",
+    "\n",
+    "def complete_link(c1,c2):\n",
+    "    return min(eucledian(p1,p2) for p1 in c1 for p2 in c2)\n",
+    "\n",
+    "def average_link(c1,c2):\n",
+    "    distances = [eucledian(p1,p2) for p1 in c1 for p2 in c2]\n",
+    "    return sum(distances)/len(distances)\n",
+    "\n",
+    "average_link([[1,2]],[[2,3]])\n",
+    "\n",
+    "def agglomerative(data, method = \"single\"):\n",
+    "    clusters = [[i] for i in data]\n",
+    "    step = 1\n",
+    "\n",
+    "    while len(clusters)>1:\n",
+    "        min_dist = float('inf')\n",
+    "        pair_to_merge = (0,1)\n",
+    "\n",
+    "        for i in range (len(clusters)):\n",
+    "            for j in range(i+1, len(clusters)):\n",
+    "                if method == \"single\":\n",
+    "                    dist = single_link(clusters[i],clusters[j])\n",
+    "                    \n",
+    "                if dist < min_dist:\n",
+    "                    min_dist = dist\n",
+    "                    pair_to_merge = (i,j)\n",
+    "\n",
+    "        i,j = pair_to_merge\n",
+    "        new_cluster = clusters[i]+clusters[j]\n",
+    "        clusters.pop(j)\n",
+    "        clusters.pop(i)\n",
+    "        clusters.append(new_cluster)\n",
+    "\n",
+    "        print(f\"Step {step}: Merged clusters {i} and {j} -> {new_cluster}\")\n",
+    "        step += 1\n",
+    "\n",
+    "print(\"=== SINGLE LINKAGE ===\")\n",
+    "agglomerative(data, \"single\")\n",
+    "        \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "523315a4-4c08-44e1-aebe-602c52ed7ea2",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import math\n",
+    "\n",
+    "# Sample 2D dataset\n",
+    "data = [\n",
+    "    [1, 2],\n",
+    "    [2, 3],\n",
+    "    [5, 8],\n",
+    "    [8, 8],\n",
+    "    [1, 0]\n",
+    "]\n",
+    "\n",
+    "def eucledian(p1, p2):\n",
+    "    return math.sqrt((p1[0]-p2[0])**2 + (p1[1]-p2[1])**2)\n",
+    "\n",
+    "def single_link(c1, c2):\n",
+    "    return min(eucledian(p1, p2) for p1 in c1 for p2 in c2)\n",
+    "\n",
+    "def complete_link(c1, c2):\n",
+    "    return max(eucledian(p1, p2) for p1 in c1 for p2 in c2)  # also fixed from min to max\n",
+    "\n",
+    "def average_link(c1, c2):\n",
+    "    distances = [eucledian(p1, p2) for p1 in c1 for p2 in c2]\n",
+    "    return sum(distances) / len(distances)\n",
+    "\n",
+    "# Example call with proper clusters\n",
+    "print(average_link([[1, 2]], [[2, 3]]))  # ✅ Corrected input\n"
+   ]
   }
  ],
  "metadata": {
