--- a/Agglomerative.ipynb
+++ b/Agglomerative.ipynb
@@ -236,19 +236,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "dde27afd-14eb-491a-94f7-98ebe07d568a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
-      "=== SINGLE LINKAGE ===\n",
-      "Step 1: Merged clusters 0 and 1 -> [[1, 2], [2, 3]]\n",
-      "Step 2: Merged clusters 2 and 3 -> [[1, 0], [1, 2], [2, 3]]\n",
-      "Step 3: Merged clusters 0 and 1 -> [[5, 8], [8, 8]]\n",
-      "Step 4: Merged clusters 0 and 1 -> [[1, 0], [1, 2], [2, 3], [5, 8], [8, 8]]\n"
+      "Enter the number of data points 5\n",
+      "Enter the Data point 0:(x,y) 1 2 \n",
+      "Enter the Data point 1:(x,y) 2 3 \n",
+      "Enter the Data point 2:(x,y) 5 8\n",
+      "Enter the Data point 3:(x,y) 8 8 \n",
+      "Enter the Data point 4:(x,y) 1 0\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      7\u001b[39m     x,y = \u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mint\u001b[39m, \u001b[38;5;28minput\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mEnter the Data point \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m:(x,y)\u001b[39m\u001b[33m\"\u001b[39m).split())\n\u001b[32m      8\u001b[39m     points.append([x,y])\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m data = \u001b[43mnp\u001b[49m.array(points)\n\u001b[32m     10\u001b[39m \u001b[38;5;28mprint\u001b[39m(data)\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34meucledian\u001b[39m(p1,p2):\n",
+      "\u001b[31mNameError\u001b[39m: name 'np' is not defined"
      ]
     }
    ],
@@ -256,13 +268,13 @@
     "import math\n",
     "\n",
     "# Sample 2D dataset\n",
-    "data = [\n",
-    "    [1, 2],\n",
-    "    [2, 3],\n",
-    "    [5, 8],\n",
-    "    [8, 8],\n",
-    "    [1, 0]\n",
-    "]\n",
+    "n = int(input(\"Enter the number of data points\"))\n",
+    "points = []\n",
+    "for i in range (n):\n",
+    "    x,y = map(int, input(f\"Enter the Data point {i}:(x,y)\").split())\n",
+    "    points.append([x,y])\n",
+    "data = np.array(points)\n",
+    "print(data)\n",
     "\n",
     "def eucledian(p1,p2):\n",
     "    return math.sqrt((p1[0]-p2[0])**2+(p1[1]-p2[1])**2)\n",
@@ -312,10 +324,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "523315a4-4c08-44e1-aebe-602c52ed7ea2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4142135623730951\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -344,6 +364,14 @@
     "# Example call with proper clusters\n",
     "print(average_link([[1, 2]], [[2, 3]]))  # ✅ Corrected input\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4b8c80f-c1f8-4697-840a-2a3ca8e884c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
