--- a/Agglomerative.ipynb
+++ b/Agglomerative.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "dde27afd-14eb-491a-94f7-98ebe07d568a",
    "metadata": {},
    "outputs": [
@@ -245,27 +245,33 @@
      "output_type": "stream",
      "text": [
       "Enter the number of data points 5\n",
-      "Enter the Data point 0:(x,y) 1 2 \n",
-      "Enter the Data point 1:(x,y) 2 3 \n",
+      "Enter the Data point 0:(x,y) 1 2\n",
+      "Enter the Data point 1:(x,y) 2 3\n",
       "Enter the Data point 2:(x,y) 5 8\n",
       "Enter the Data point 3:(x,y) 8 8 \n",
       "Enter the Data point 4:(x,y) 1 0\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      7\u001b[39m     x,y = \u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mint\u001b[39m, \u001b[38;5;28minput\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mEnter the Data point \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m:(x,y)\u001b[39m\u001b[33m\"\u001b[39m).split())\n\u001b[32m      8\u001b[39m     points.append([x,y])\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m data = \u001b[43mnp\u001b[49m.array(points)\n\u001b[32m     10\u001b[39m \u001b[38;5;28mprint\u001b[39m(data)\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34meucledian\u001b[39m(p1,p2):\n",
-      "\u001b[31mNameError\u001b[39m: name 'np' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [2 3]\n",
+      " [5 8]\n",
+      " [8 8]\n",
+      " [1 0]]\n",
+      "=== SINGLE LINKAGE ===\n",
+      "Step 1: Merged clusters 0 and 1 -> [array([1, 2]), array([2, 3])]\n",
+      "Step 2: Merged clusters 2 and 3 -> [array([1, 0]), array([1, 2]), array([2, 3])]\n",
+      "Step 3: Merged clusters 0 and 1 -> [array([5, 8]), array([8, 8])]\n",
+      "Step 4: Merged clusters 0 and 1 -> [array([1, 0]), array([1, 2]), array([2, 3]), array([5, 8]), array([8, 8])]\n"
      ]
     }
    ],
    "source": [
     "import math\n",
+    "import numpy as np\n",
     "\n",
     "# Sample 2D dataset\n",
     "n = int(input(\"Enter the number of data points\"))\n",
